--- a/prcpp-week10/src/Makefile
+++ b/prcpp-week10/src/Makefile
@@ -2,5 +2,7 @@ TestAccounts.class: TestAccounts.java
 	javac -cp ~/.lib/multiverse-core-0.7.0.jar TestAccounts.java
 TestStmHistogram.class: TestStmHistogram.java
 	javac -cp ~/.lib/multiverse-core-0.7.0.jar TestStmHistogram.java
+TestStmMap.class: TestStmMap.java
+	javac -cp ~/.lib/multiverse-core-0.7.0.jar TestStmMap.java
 clean:
 	rm -rf *.class
