Done and now submitting

--- a/prcpp-exam/Makefile
+++ b/prcpp-exam/Makefile
@@ -2,7 +2,7 @@ all: exam.pdf frontpage.pdf
 	pdfjam \
 	frontpage.pdf \
 	exam.pdf \
-	--outfile BPRD-exam-.pdf
+	--outfile PRCPP-exam-jbec.pdf
 
 exam.pdf: exam.tex
 	pdflatex exam.tex
